# griptape-multiagent-demo

./: .gitignore  multiagent.py  pyproject.toml  the-ai-optimist.md  the-ai-pessimist.md  the-fool.md  util.py
